<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewsLayer.MainActivity"
    android:background="@drawable/home_bg"
    android:padding="60dp">


    <TextView
        android:id="@+id/title"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cartImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/round_input_bg"
        android:hint="@string/email"
        android:textColor="#500218"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/cartImg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_input_bg"
        android:hint="@string/password"
        android:textColor="#500218"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorColor="#A1737781"
        app:indicatorDirectionCircular="clockwise"
        app:indicatorSize="100dp"
        app:trackColor="#80FFFFFF"
        app:trackThickness="7dp"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@id/logBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginBottom="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logBtn"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:background="#500218"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="100dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/regDialogBtn"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regDialogBtn"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="100dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>